@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2017 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,6 +18,7 @@ package org.springframework.web.reactive.resource;
 
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
@@ -27,9 +28,11 @@ import reactor.core.publisher.Mono;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
+import org.springframework.core.log.LogFormatUtils;
 import org.springframework.lang.Nullable;
 import org.springframework.util.StringUtils;
 import org.springframework.web.server.ServerWebExchange;
+import org.springframework.web.util.UriUtils;
 
 /**
  * A simple {@code ResourceResolver} that tries to find a resource under the given
@@ -39,6 +42,7 @@ import org.springframework.web.server.ServerWebExchange;
  * expected to be configured at the end in a chain of resolvers.
  *
  * @author Rossen Stoyanchev
+ * @author Sam Brannen
  * @since 5.0
  */
 public class PathResourceResolver extends AbstractResourceResolver {
@@ -107,30 +111,34 @@ public class PathResourceResolver extends AbstractResourceResolver {
 	 */
 	protected Mono<Resource> getResource(String resourcePath, Resource location) {
 		try {
+			if (!(location instanceof UrlResource)) {
+				resourcePath = UriUtils.decode(resourcePath, StandardCharsets.UTF_8);
+			}
 			Resource resource = location.createRelative(resourcePath);
-			if (resource.exists() && resource.isReadable()) {
+			if (resource.isReadable()) {
 				if (checkResource(resource, location)) {
-					if (logger.isTraceEnabled()) {
-						logger.trace("Found match: " + resource);
-					}
 					return Mono.just(resource);
 				}
-				else if (logger.isTraceEnabled()) {
-					Resource[] allowedLocations = getAllowedLocations();
-					logger.trace("Resource path=\"" + resourcePath + "\" was successfully resolved " +
-							"but resource=\"" + resource.getURL() + "\" is neither under the " +
-							"current location=\"" + location.getURL() + "\" nor under any of the " +
-							"allowed locations=" + (allowedLocations != null ? Arrays.asList(allowedLocations) : "[]"));
+				else if (logger.isWarnEnabled()) {
+					Resource[] allowed = getAllowedLocations();
+					logger.warn(LogFormatUtils.formatValue(
+							"Resource path \"" + resourcePath + "\" was successfully resolved " +
+									"but resource \"" + resource.getURL() + "\" is neither under the " +
+									"current location \"" + location.getURL() + "\" nor under any of the " +
+									"allowed locations " + (allowed != null ? Arrays.asList(allowed) : "[]"), -1, true));
 				}
-			}
-			else if (logger.isTraceEnabled()) {
-				logger.trace("No match for location: " + location);
 			}
 			return Mono.empty();
 		}
 		catch (IOException ex) {
-			if (logger.isTraceEnabled()) {
-				logger.trace("Failure checking for relative resource under location + " + location, ex);
+			if (logger.isDebugEnabled()) {
+				String error = "Skip location [" + location + "] due to error";
+				if (logger.isTraceEnabled()) {
+					logger.trace(error, ex);
+				}
+				else {
+					logger.debug(error + ": " + ex.getMessage());
+				}
 			}
 			return Mono.error(ex);
 		}
@@ -171,8 +179,8 @@ public class PathResourceResolver extends AbstractResourceResolver {
 			resourcePath = resource.getURL().toExternalForm();
 			locationPath = StringUtils.cleanPath(location.getURL().toString());
 		}
-		else if (resource instanceof ClassPathResource) {
-			resourcePath = ((ClassPathResource) resource).getPath();
+		else if (resource instanceof ClassPathResource classPathResource) {
+			resourcePath = classPathResource.getPath();
 			locationPath = StringUtils.cleanPath(((ClassPathResource) location).getPath());
 		}
 		else {
@@ -184,21 +192,25 @@ public class PathResourceResolver extends AbstractResourceResolver {
 			return true;
 		}
 		locationPath = (locationPath.endsWith("/") || locationPath.isEmpty() ? locationPath : locationPath + "/");
-		if (!resourcePath.startsWith(locationPath)) {
-			return false;
-		}
+		return (resourcePath.startsWith(locationPath) && !isInvalidEncodedPath(resourcePath));
+	}
 
+	private boolean isInvalidEncodedPath(String resourcePath) {
 		if (resourcePath.contains("%")) {
 			// Use URLDecoder (vs UriUtils) to preserve potentially decoded UTF-8 chars...
-			if (URLDecoder.decode(resourcePath, "UTF-8").contains("../")) {
-				if (logger.isTraceEnabled()) {
-					logger.trace("Resolved resource path contains \"../\" after decoding: " + resourcePath);
+			try {
+				String decodedPath = URLDecoder.decode(resourcePath, StandardCharsets.UTF_8);
+				if (decodedPath.contains("../") || decodedPath.contains("..\\")) {
+					logger.warn(LogFormatUtils.formatValue(
+							"Resolved resource path contains encoded \"../\" or \"..\\\": " + resourcePath, -1, true));
+					return true;
 				}
-				return false;
+			}
+			catch (IllegalArgumentException ex) {
+				// May not be possible to decode...
 			}
 		}
-
-		return true;
+		return false;
 	}
 
 }
